--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "md-parser",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "author": "domingo2000 <dedwards@buk.cl>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest"
+  }
 }
