--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "md-parser",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "domingo2000 <dedwards@buk.cl>",
   "license": "MIT",
   "devDependencies": {
